test/k8s/minimal-ingress/istio-micro-ingress/istio-microingress-debug.yaml
# Open debug ports for the micro-ingress

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pilot-monitor
spec:
  hosts:
    - pilot-micro-ingress.example.com
  gateways:
    - ingressgateway
  http:
    - route:
        - destination:
            host: istio-pilot.istio-micro-ingress.svc.cluster.local
            port:
              number: 15014

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: prometheus
spec:
  host: prometheus.istio-telemetry.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
spec:
  hosts:
    - prometheus.example.com
  gateways:
    - ingressgateway
  http:
    - route:
        - destination:
            host: prometheus.istio-telemetry.svc.cluster.local
            port:
